Various Cosmetic Changes
Finished Java 17 migration, Renamed references of "System Tray" to "Tray Icon"